rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-b67298bbe61107fb.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-b67298bbe61107fb: missing-argument.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-b67298bbe61107fb.d: missing-argument.rs

missing-argument.rs:
